// This file is part of MinIO Kubernetes Cloud
// Copyright (c) 2019 MinIO, Inc.
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.
syntax = "proto3";


option java_multiple_files = true;
option java_package = "io.min.m3.private-api";
option java_outer_classname = "PrivateApiProto";

package m3;

service PrivateAPI {
    rpc AddTenant (AddTenantRequest) returns (AddTenantResponse) {
    }
    rpc AdminAdd (AdminAddRequest) returns (AdminAddResponse) {
    }
    rpc SetPassword (SetAdminPasswordRequest) returns (SetAdminPasswordResponse) {
    }
    rpc Login (CLILoginRequest) returns (CLILoginResponse) {

    }
}

message AddTenantRequest {
    string name = 1;
    string short_name = 2;
    string user_name = 3;
    string user_email = 4;
}

message AddTenantResponse {
    string error = 1;
    string status = 2;
}


message AdminAddRequest {
    string name = 1;
    string email = 2;
}

message AdminAddResponse {
    string error = 1;
    string status = 2;
}

message SetAdminPasswordRequest {
    string token = 1;
    string password = 2;
}

message SetAdminPasswordResponse {
    string error = 1;
    string status = 2;
}
message CLILoginRequest {
    string email = 1;
    string password = 2;
}

message CLILoginResponse {
    string error = 1;
    string token = 2;
    int64 expires = 3;
    string refresh_token = 4;
    int64 refresh_token_expires = 5;
}
